// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UserMenu > renders a button 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="User menu"
    class="triggerButton"
    data-state="closed"
    id="radix-_r_0_"
    type="button"
  >
    <span
      aria-label="@person-name:homeserver.com"
      class="_avatar_zysgz_8"
      data-color="1"
      data-type="round"
      role="img"
      style="--cpd-avatar-size: 36px;"
    >
      <img
        alt=""
        class="_image_zysgz_43"
        data-type="round"
        height="36px"
        loading="lazy"
        referrerpolicy="no-referrer"
        src="/static/element.png"
        width="36px"
      />
    </span>
    <span
      class="_typography_6v6n8_153 _font-heading-sm-semibold_6v6n8_93"
    >
      Sally Sanderson
    </span>
  </button>
</div>
`;

exports[`UserMenu > renders a button with a longer name 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="User menu"
    class="triggerButton"
    data-state="closed"
    id="radix-_r_2_"
    type="button"
  >
    <span
      aria-label="@person-name:homeserver.com"
      class="_avatar_zysgz_8"
      data-color="1"
      data-type="round"
      role="img"
      style="--cpd-avatar-size: 36px;"
    >
      <img
        alt=""
        class="_image_zysgz_43"
        data-type="round"
        height="36px"
        loading="lazy"
        referrerpolicy="no-referrer"
        src="/static/element.png"
        width="36px"
      />
    </span>
    <span
      class="_typography_6v6n8_153 _font-heading-sm-semibold_6v6n8_93"
    >
      Sally Sanderson with a longer name
    </span>
  </button>
</div>
`;

exports[`UserMenu > renders a guest menu 1`] = `
<body
  data-scroll-locked="1"
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  
  


  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <button
      aria-controls="radix-_r_d_"
      aria-expanded="true"
      aria-haspopup="menu"
      aria-label="User menu"
      class="triggerButton"
      data-state="open"
      id="radix-_r_c_"
      type="button"
    >
      <span
        aria-label="@guest:attendees.example.org"
        class="_avatar_zysgz_8"
        data-color="4"
        data-type="round"
        role="img"
        style="--cpd-avatar-size: 36px;"
      >
        <img
          alt=""
          class="_image_zysgz_43"
          data-type="round"
          height="36px"
          loading="lazy"
          referrerpolicy="no-referrer"
          src="/static/element.png"
          width="36px"
        />
      </span>
      <span
        class="_typography_6v6n8_153 _font-heading-sm-semibold_6v6n8_93"
      >
        Guest
      </span>
    </button>
  </div>
  <div
    data-radix-popper-content-wrapper=""
    dir="ltr"
    style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 49px); min-width: max-content; --radix-popper-transform-origin: 0% 0px; z-index: auto; --radix-popper-available-width: 414px; --radix-popper-available-height: 847px; --radix-popper-anchor-width: 83.5625px; --radix-popper-anchor-height: 41px;"
  >
    <div
      aria-label="User menu"
      aria-labelledby="radix-_r_c_"
      aria-orientation="vertical"
      class="container _menu_1w1u7_8"
      data-align="start"
      data-orientation="vertical"
      data-radix-menu-content=""
      data-side="bottom"
      data-state="open"
      dir="ltr"
      id="radix-_r_d_"
      role="menu"
      style="outline: none; --radix-dropdown-menu-content-transform-origin: var(--radix-popper-transform-origin); --radix-dropdown-menu-content-available-width: var(--radix-popper-available-width); --radix-dropdown-menu-content-available-height: var(--radix-popper-available-height); --radix-dropdown-menu-trigger-width: var(--radix-popper-anchor-width); --radix-dropdown-menu-trigger-height: var(--radix-popper-anchor-height); pointer-events: auto;"
      tabindex="-1"
    >
      <section
        class="profile"
      >
        <span
          class="_typography_6v6n8_153 _font-heading-md-semibold_6v6n8_112 displayname"
        >
          Guest
        </span>
        <span
          class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50"
          data-testid="userId"
        >
          @guest:attendees.example.org
        </span>
        <button
          class="_button_13vu4_8 createAccount"
          data-kind="primary"
          data-size="sm"
          role="button"
          tabindex="0"
        >
          Create an account
        </button>
        <span
          class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60"
        >
          Got an account?
          <a
            as="button"
            class="_link_1v5rz_8"
            data-kind="primary"
            data-size="medium"
            rel="noreferrer noopener"
          >
            Sign in
          </a>
        </span>
      </section>
      <div
        class="_separator_cqpyv_8"
        data-kind="primary"
        data-orientation="horizontal"
        role="separator"
      />
      <section
        class="actions"
      >
        <button
          class="_item_lqfwq_8 _interactive_lqfwq_26"
          data-kind="primary"
          data-orientation="vertical"
          data-radix-collection-item=""
          role="menuitem"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="_icon_lqfwq_50"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M16 11v8h3V9.177l-7-3.889-7 3.889V19h3v-8zm-6 10H5a2 2 0 0 1-2-2V9.177a2 2 0 0 1 1.029-1.748l7-3.89a2 2 0 0 1 1.942 0l7 3.89A2 2 0 0 1 21 9.177V19a2 2 0 0 1-2 2h-5v-8h-4z"
              fill-rule="evenodd"
            />
          </svg>
          <span
            class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 _label_lqfwq_34"
          >
            Home
          </span>
          <svg
            aria-hidden="true"
            class="_nav-hint_lqfwq_59"
            fill="currentColor"
            height="24"
            viewBox="8 0 8 24"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
            />
          </svg>
        </button>
        <button
          class="_item_lqfwq_8 _interactive_lqfwq_26"
          data-kind="primary"
          data-orientation="vertical"
          data-radix-collection-item=""
          role="menuitem"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="_icon_lqfwq_50"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.713 16.713A.97.97 0 0 1 12 17a.97.97 0 0 1-.713-.288A.97.97 0 0 1 11 16q0-.424.287-.713A.97.97 0 0 1 12 15q.424 0 .713.287.287.288.287.713 0 .424-.287.712m0-3.999A.97.97 0 0 1 12 13a.97.97 0 0 1-.713-.287A.97.97 0 0 1 11 12V8q0-.424.287-.713A.97.97 0 0 1 12 7q.424 0 .713.287Q13 7.576 13 8v4q0 .424-.287.713"
            />
            <path
              d="M2.95 16.3a10.2 10.2 0 0 1-.712-2.1A10.2 10.2 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22q-1.125 0-2.2-.238a10.2 10.2 0 0 1-2.1-.712L2.75 22.5a.94.94 0 0 1-1-.25.94.94 0 0 1-.25-1zm4.2 2.8a1 1 0 0 1 .275-.062q.15-.013.275-.013.225 0 .438.038.212.036.412.137a7.4 7.4 0 0 0 1.675.6Q11.1 20 12 20q3.35 0 5.675-2.325T20 12t-2.325-5.675T12 4 6.325 6.325 4 12q0 .9.2 1.775t.6 1.675q.176.325.188.688t-.088.712l-.95 3.2z"
            />
          </svg>
          <span
            class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 _label_lqfwq_34"
          >
            Feedback
          </span>
          <svg
            aria-hidden="true"
            class="_nav-hint_lqfwq_59"
            fill="currentColor"
            height="24"
            viewBox="8 0 8 24"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
            />
          </svg>
        </button>
        <button
          class="_item_lqfwq_8 _interactive_lqfwq_26"
          data-kind="primary"
          data-orientation="vertical"
          data-radix-collection-item=""
          role="menuitem"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="_icon_lqfwq_50"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 12a4 4 0 1 1-8 0 4 4 0 0 1 8 0m-2 0a2 2 0 1 0-4 0 2 2 0 0 0 4 0"
            />
            <path
              d="M11.312 2h1.376A2.31 2.31 0 0 1 15 4.312v.247l.002.003c.01.014.031.033.064.047.03.013.056.013.07.01h.002l.177-.177a2.31 2.31 0 0 1 3.27 0l.973.974a2.31 2.31 0 0 1 0 3.269l-.177.177v.003a.13.13 0 0 0 .01.07.15.15 0 0 0 .047.063l.003.002h.247A2.31 2.31 0 0 1 22 11.312v1.376A2.31 2.31 0 0 1 19.688 15h-.247l-.003.002a.15.15 0 0 0-.047.064.13.13 0 0 0-.01.07v.002l.177.177a2.31 2.31 0 0 1 0 3.27l-.974.973a2.31 2.31 0 0 1-3.269 0l-.177-.177h-.003a.13.13 0 0 0-.07.01.15.15 0 0 0-.063.047l-.002.003v.247A2.31 2.31 0 0 1 12.688 22h-1.376A2.31 2.31 0 0 1 9 19.688v-.247l-.002-.003a.15.15 0 0 0-.064-.047.13.13 0 0 0-.07-.01h-.002l-.177.177a2.31 2.31 0 0 1-3.27 0l-.973-.974a2.31 2.31 0 0 1 0-3.269l.177-.177v-.003a.14.14 0 0 0-.01-.07.15.15 0 0 0-.047-.063L4.559 15h-.247A2.31 2.31 0 0 1 2 12.688v-1.376A2.31 2.31 0 0 1 4.312 9h.247l.003-.002a.15.15 0 0 0 .047-.064.14.14 0 0 0 .01-.07v-.002l-.177-.177a2.31 2.31 0 0 1 0-3.27l.974-.973a2.31 2.31 0 0 1 3.269 0l.177.177h.003a.14.14 0 0 0 .07-.01.15.15 0 0 0 .063-.047L9 4.559v-.247A2.31 2.31 0 0 1 11.312 2M11 4.312v.257c0 .893-.59 1.593-1.299 1.887-.716.297-1.622.21-2.248-.418l-.182-.182a.31.31 0 0 0-.441 0l-.974.974a.31.31 0 0 0 0 .44l.182.183c.627.626.715 1.531.418 2.248C6.162 10.41 5.462 11 4.569 11h-.257a.31.31 0 0 0-.312.312v1.376c0 .172.14.312.312.312h.257c.893 0 1.593.59 1.887 1.299.297.716.21 1.622-.418 2.248l-.182.182a.31.31 0 0 0 0 .441l.974.973a.31.31 0 0 0 .44 0l.183-.181c.626-.627 1.532-.715 2.248-.418.709.294 1.299.994 1.299 1.887v.257c0 .172.14.312.312.312h1.376c.172 0 .312-.14.312-.312v-.257c0-.893.59-1.593 1.299-1.887.716-.297 1.622-.21 2.249.418l.181.181c.122.122.32.122.441 0l.973-.973a.31.31 0 0 0 0-.44l-.181-.183c-.627-.626-.715-1.532-.418-2.248.294-.709.994-1.299 1.887-1.299h.257c.172 0 .312-.14.312-.312v-1.376a.31.31 0 0 0-.312-.312h-.257c-.893 0-1.593-.59-1.887-1.299-.297-.717-.21-1.622.418-2.248l.181-.182a.31.31 0 0 0 0-.441l-.973-.974a.31.31 0 0 0-.44 0l-.183.182c-.626.627-1.532.715-2.248.418C13.59 6.162 13 5.462 13 4.569v-.257A.31.31 0 0 0 12.688 4h-1.376a.31.31 0 0 0-.312.312"
            />
          </svg>
          <span
            class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 _label_lqfwq_34"
          >
            Settings
          </span>
          <svg
            aria-hidden="true"
            class="_nav-hint_lqfwq_59"
            fill="currentColor"
            height="24"
            viewBox="8 0 8 24"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
            />
          </svg>
        </button>
      </section>
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`UserMenu > renders a menu 1`] = `
<body
  data-scroll-locked="1"
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  
  


  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <button
      aria-controls="radix-_r_7_"
      aria-expanded="true"
      aria-haspopup="menu"
      aria-label="User menu"
      class="triggerButton"
      data-state="open"
      id="radix-_r_6_"
      type="button"
    >
      <span
        aria-label="@person-name:homeserver.com"
        class="_avatar_zysgz_8"
        data-color="1"
        data-type="round"
        role="img"
        style="--cpd-avatar-size: 36px;"
      >
        <img
          alt=""
          class="_image_zysgz_43"
          data-type="round"
          height="36px"
          loading="lazy"
          referrerpolicy="no-referrer"
          src="/static/element.png"
          width="36px"
        />
      </span>
      <span
        class="_typography_6v6n8_153 _font-heading-sm-semibold_6v6n8_93"
      >
        Sally Sanderson
      </span>
    </button>
  </div>
  <div
    data-radix-popper-content-wrapper=""
    dir="ltr"
    style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 49px); min-width: max-content; --radix-popper-transform-origin: 0% 0px; z-index: auto; --radix-popper-available-width: 414px; --radix-popper-available-height: 847px; --radix-popper-anchor-width: 145.0625px; --radix-popper-anchor-height: 41px;"
  >
    <div
      aria-label="User menu"
      aria-labelledby="radix-_r_6_"
      aria-orientation="vertical"
      class="container _menu_1w1u7_8"
      data-align="start"
      data-orientation="vertical"
      data-radix-menu-content=""
      data-side="bottom"
      data-state="open"
      dir="ltr"
      id="radix-_r_7_"
      role="menu"
      style="outline: none; --radix-dropdown-menu-content-transform-origin: var(--radix-popper-transform-origin); --radix-dropdown-menu-content-available-width: var(--radix-popper-available-width); --radix-dropdown-menu-content-available-height: var(--radix-popper-available-height); --radix-dropdown-menu-trigger-width: var(--radix-popper-anchor-width); --radix-dropdown-menu-trigger-height: var(--radix-popper-anchor-height); pointer-events: auto;"
      tabindex="-1"
    >
      <section
        class="profile"
      >
        <span
          aria-label="@person-name:homeserver.com"
          class="_avatar_zysgz_8"
          data-color="1"
          data-type="round"
          role="img"
          style="--cpd-avatar-size: 88px;"
        >
          <img
            alt=""
            class="_image_zysgz_43"
            data-type="round"
            height="88px"
            loading="lazy"
            referrerpolicy="no-referrer"
            src="/static/element.png"
            width="88px"
          />
        </span>
        <span
          class="_typography_6v6n8_153 _font-heading-md-semibold_6v6n8_112 displayname"
        >
          Sally Sanderson
        </span>
        <span
          class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50"
          data-testid="userId"
        >
          @person-name:homeserver.com
        </span>
        <a
          class="_button_13vu4_8 _has-icon_13vu4_60"
          data-kind="tertiary"
          data-size="sm"
          href="#"
          role="link"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 3h6a1 1 0 1 1 0 2H5v14h14v-6a1 1 0 1 1 2 0v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2"
            />
            <path
              d="M15 3h5a1 1 0 0 1 1 1v5a1 1 0 1 1-2 0V6.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L17.586 5H15a1 1 0 1 1 0-2"
            />
          </svg>
          Manage account
        </a>
      </section>
      <div
        class="_separator_cqpyv_8"
        data-kind="primary"
        data-orientation="horizontal"
        role="separator"
      />
      <section
        class="actions"
      >
        <button
          class="_item_lqfwq_8 _interactive_lqfwq_26"
          data-kind="primary"
          data-orientation="vertical"
          data-radix-collection-item=""
          role="menuitem"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="_icon_lqfwq_50"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m10.6 13.8-2.15-2.15a.95.95 0 0 0-.7-.275.95.95 0 0 0-.7.275.95.95 0 0 0-.275.7q0 .425.275.7L9.9 15.9q.3.3.7.3t.7-.3l5.65-5.65a.95.95 0 0 0 .275-.7.95.95 0 0 0-.275-.7.95.95 0 0 0-.7-.275.95.95 0 0 0-.7.275zM12 22a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22m0-2q3.35 0 5.675-2.325T20 12t-2.325-5.675T12 4 6.325 6.325 4 12t2.325 5.675T12 20"
            />
          </svg>
          <span
            class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 _label_lqfwq_34"
          >
            One action
          </span>
          <svg
            aria-hidden="true"
            class="_nav-hint_lqfwq_59"
            fill="currentColor"
            height="24"
            viewBox="8 0 8 24"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
            />
          </svg>
        </button>
        <button
          class="_item_lqfwq_8 _interactive_lqfwq_26"
          data-kind="primary"
          data-orientation="vertical"
          data-radix-collection-item=""
          role="menuitem"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="_icon_lqfwq_50"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m10.6 13.8-2.15-2.15a.95.95 0 0 0-.7-.275.95.95 0 0 0-.7.275.95.95 0 0 0-.275.7q0 .425.275.7L9.9 15.9q.3.3.7.3t.7-.3l5.65-5.65a.95.95 0 0 0 .275-.7.95.95 0 0 0-.275-.7.95.95 0 0 0-.7-.275.95.95 0 0 0-.7.275zM12 22a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22m0-2q3.35 0 5.675-2.325T20 12t-2.325-5.675T12 4 6.325 6.325 4 12t2.325 5.675T12 20"
            />
          </svg>
          <span
            class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 _label_lqfwq_34"
          >
            Another action
          </span>
          <svg
            aria-hidden="true"
            class="_nav-hint_lqfwq_59"
            fill="currentColor"
            height="24"
            viewBox="8 0 8 24"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
            />
          </svg>
        </button>
        <button
          class="_item_lqfwq_8 _interactive_lqfwq_26"
          data-kind="primary"
          data-orientation="vertical"
          data-radix-collection-item=""
          role="menuitem"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="_icon_lqfwq_50"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m10.6 13.8-2.15-2.15a.95.95 0 0 0-.7-.275.95.95 0 0 0-.7.275.95.95 0 0 0-.275.7q0 .425.275.7L9.9 15.9q.3.3.7.3t.7-.3l5.65-5.65a.95.95 0 0 0 .275-.7.95.95 0 0 0-.275-.7.95.95 0 0 0-.7-.275.95.95 0 0 0-.7.275zM12 22a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22m0-2q3.35 0 5.675-2.325T20 12t-2.325-5.675T12 4 6.325 6.325 4 12t2.325 5.675T12 20"
            />
          </svg>
          <span
            class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 _label_lqfwq_34"
          >
            Third action
          </span>
          <svg
            aria-hidden="true"
            class="_nav-hint_lqfwq_59"
            fill="currentColor"
            height="24"
            viewBox="8 0 8 24"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
            />
          </svg>
        </button>
      </section>
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`UserMenu > renders condensed view 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="User menu"
    class="triggerButton"
    data-state="closed"
    id="radix-_r_4_"
    type="button"
  >
    <span
      aria-label="@person-name:homeserver.com"
      class="_avatar_zysgz_8"
      data-color="1"
      data-type="round"
      role="img"
      style="--cpd-avatar-size: 36px;"
    >
      <img
        alt=""
        class="_image_zysgz_43"
        data-type="round"
        height="36px"
        loading="lazy"
        referrerpolicy="no-referrer"
        src="/static/element.png"
        width="36px"
      />
    </span>
  </button>
</div>
`;
